<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forecast.view.forecast.ForecastFragment">

    <EditText
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/city_name_hint"
        android:textAlignment="center"
        android:lines="0"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="@dimen/big_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/forecast_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/big_space"
        android:layout_marginEnd="@dimen/big_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city_name" />

</androidx.constraintlayout.widget.ConstraintLayout>